--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
   overflow: hidden;
 }
 
+.hide {
+  display: none;
+}
+
 body {
   background-color: #ffffff;
   color: #757575;
@@ -781,40 +785,33 @@ a {
   color: #ffffff;
 }
 
+.projects {
+  display: flex;
+  gap: 30px;
+}
+
 @media screen and (max-width: 767px) {
+  .projects {
+    flex-direction: column;
+  }
   .projects__item {
     width: 100%;
-  }
-  .projects__item:not(:last-child) {
-    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 768px) {
   .projects {
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .projects__item {
-    width: calc((100% - 30px) / 2);
-  }
-  .projects__item:not(:nth-child(2n)) {
-    margin-right: 30px;
-  }
-  .projects__item:not(:nth-last-child(-n+1)) {
-    margin-bottom: 30px;
+    flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .projects__item {
-    width: calc((100% - 60px) / 3);
-  }
-  .projects__item:not(:nth-child(3n)) {
-    margin-right: 30px;
-  }
-  .projects__item:not(:nth-last-child(-n+3)) {
-    margin-bottom: 30px;
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
 .projects__link {
