--- a/sass/components/_projects-portfolio.scss
+++ b/sass/components/_projects-portfolio.scss
@@ -1,37 +1,30 @@
+.projects {
+  display: flex;
+  gap: 30px;
+}
 @media screen and (max-width: 767px) {
+  .projects {
+    flex-direction: column;
+  }
   .projects__item {
     width: 100%;
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
   }
 }
 @media screen and (min-width: 768px) {
   .projects {
-    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
   }
   @media screen and (max-width: 1199px) {
     .projects__item {
-      width: calc((100% - 30px) / 2);
-      &:not(:nth-child(2n)) {
-        margin-right: 30px;
-      }
-      &:not(:nth-last-child(-n + 1)) {
-        margin-bottom: 30px;
-      }
+      flex-basis: calc((100% - 30px) / 2);
     }
   }
 }
+
 @media screen and (min-width: 1200px) {
   .projects__item {
-    width: calc((100% - 60px) / 3);
-    &:not(:nth-child(3n)) {
-      margin-right: 30px;
-    }
-    &:not(:nth-last-child(-n + 3)) {
-      margin-bottom: 30px;
-    }
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
 
